compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:5:13: error: 'Custom' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
fun test(c: Custom, ca: CustomAlias) {
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:5:25: error: 'Custom' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
fun test(c: Custom, ca: CustomAlias) {
                        ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:6:5: error: 'callCustom(Custom): Unit' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    callCustom(c)
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:7:5: error: 'callUnsigned(): UInt' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    callUnsigned()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:8:5: error: 'callResult(List<Result<Int>?>): Unit' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    callResult(listOf(null))
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:9:5: error: 'constructor Ctor(Custom)' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    Ctor(c)
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:10:5: error: 'prop: UByte' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    prop
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/useInlineClassTypesInCompatibilityMode/source.kt:11:5: error: 'Custom' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    CustomAlias(0)
    ^
COMPILATION_ERROR
